change URL constructor since default one is deprecated